@@ -9,6 +9,7 @@ version ? (????-??-??):
   - BTS:0000787: fixed parse error in transferforms2.php (alec)
   - lmsd/hostfile: fixed 'excluded_customergroups' option query (alec)
   - fixed stats compacting (alec)
+  - added division filter on Customers List (alec)
 
 version 1.11.7 Bastet (2009-02-13):
 
